@@ -1,3 +1,12 @@
+2006-03-13  Benjamin Herrenschmidt  <benh@kernel.crashing.org>
+
+	* src/radeon_driver.c: (RADEONPreInitVRAM),
+	(RADEONPreInitChipType), (RADEONPreInit):
+	Earliest fix introduced a bug due to another chicken & egg problem in
+	card detection. Now split PreInitConfig into PreInitChipType and
+	PreInitVRAM so that PreInitDRI can be done just in between. Restores
+	proper AGPx4 functionality (when enabled)
+
 2006-03-12  Benjamin Herrenschmidt  <benh@kernel.crashing.org>
 
 	* src/ati.h:
